2000-12-15  Martin Baulig  <baulig@suse.de>

	* gnome-canvas.c (gnome_canvas_item_class_init): Added "parent"
	property to the GnomeCanvasItem.

2000-12-15  Martin Baulig  <baulig@suse.de>

	The big "while it is raining outside" cleanup to make it
	work with the latest glib/gtk+ API:

	- moved GtkArg to GParam.
	- removed all calls to gtk_object_class_add_signals().
	- reflect latest GtkNotebook changes.

	* gnome-animator.c, gnome-app.c, gnome-appbar.c,
	gnome-calculator.c, gnome-canvas-pixbuf.c, gnome-canvas-text.c,
	gnome-canvas-widget.c, gnome-canvas.c, gnome-client.c,
	gnome-color-picker.c, gnome-dateedit.c, gnome-dialog.c,
	gnome-ditem-edit.c, gnome-dock-band.c, gnome-dock-item.c,
	gnome-dock.c, gnome-druid-page.c, gnome-druid.c, gnome-entry.c,
	gnome-file-entry.c, gnome-font-picker.c, gnome-helpsys.c,
	gnome-href.c, gnome-icon-item.c, gnome-icon-list.c, gnome-mdi.c,
	gnome-paper-selector.c, gnome-pixmap.c, gnome-pouch.c,
	gnome-propertybox.c, gnome-recently-used.c, gnome-roo.c,
	gnome-selector.c, gnome-textfu.c, wap-textfu.c: here.

	* gnome-canvas.h (gnome_canvas_newv): Removed.
	(gnome_canvas_constructv): Removed.

2000-12-13  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector): Merged the "clear" and
	"clear_default" signals into one "clear" signal with a `list_id'
	argument; added `list_id' argument to the "update_uri_list"
	signal; changed the `defaulpt' argument of the "get_uri_list"
	signal to a `list_id' argument; added new "add_uri_list" signal;
	merged the "add_file" and "add_file_default" signals into one
	"add_file" signal with a `list_id' argument; did the same for the
	"add_directory" and "add_uri" signals.
	(gnome_selector_add_file): Changed the `gboolean defaultp' argument
	into `guint list_id'.
	(gnome_selector_add_directory): Likewise.
	(gnome_selector_add_uri): Likewise.
	(gnome_selector_get_uri_list): Likewise.
	(gnome_selector_clear): Likewise.
	(gnome_selector_update_uri_list): Added `guint list_id' argument.